implemented ClientState class